2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (show_window_internal),
	(_gdk_quartz_window_detach_from_parent),
	(_gdk_quartz_window_attach_to_parent), (gdk_window_focus): Clear
	the toplevel ordering list in all places where the order is
	potentially changed. Fixes mouse focus issues for windows with
	a transient parent set.

2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c
	(_gdk_quartz_events_update_mouse_window): Highlight the mouse
	window when event debugging is enabled.

2008-02-16  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c (create_scroll_event): Add state
	to the scroll event (bug #516757, Paul Davis).

2008-02-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-02-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklinkbutton.c: Show the URI in a tooltip.  (#505480,
	Teppo Turtiainen)

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gdk/Makefile.am: Don't install private headers. (#463510)

	* gdk/gdkinternal.h: Include gdkmedialib.h here, not in
	the installed header gdkprivate.h.

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_stop_reorder): Prevent
	a crash with hidden, reorderable tabs.  (#513230, 
	Mike Massonnet, patch by Carlos Garnacho)

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_insert_action_group):
	Warn on duplicate action group names.  (#501746, Christian
	Persch)

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am:
	* modules/other/gail/tests/Makefile.am:
	* modules/other/gail/libgail-util/Makefile.am:
	* modules/other/gail/Makefile.am: Fix builddir!=srcdir
	builds.  (#516254,  Yevgen Muntyan)

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c:
	* gtk/gtkfilesel.c:
	* gtk/gtklabel.c:
	* gtk/gtkpathbar.c: Use gtk_drag_*_add_{text,uri}_targets 